# HW_laba_9

./: .gitignore  CMakeLists.txt  LICENSE.txt  Readme.md  makefile
include/: deque_module.h  models.h  queue_module.h  stack_module.h
src/: deque_module.cpp  main.cpp  queue_module.cpp  stack_module.cpp
